--- a/gestion-hoteles/package.json
+++ b/gestion-hoteles/package.json
@@ -30,7 +30,8 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
-    "bootstrap": "^5.3.0",
+    "@ng-icons/core": "^33.0.0",
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
